grammar.js
    program: $ => seq(
      optional($.hash_bang_line),
      repeat($.statement),
    ),

    //
    // Markup entry point
    //
    // A .uc.tmpl document is a flat sequence of markup nodes: raw
    // text, comment tags, expression tags, statement tags, and the
    // alt-syntax constructs that span multiple tags.
    //
    // Statement tags that contain only simple (non-spanning) code are
    // wrapped in `statement_tag`.  Alt-syntax constructs that span tag
    // boundaries appear directly as markup nodes with explicit tag-open /
    // tag-close fields, giving a pristine tree with no empty-statement noise.
    //
    expression_statement: $ => seq(
      $._expressions,
      $._semicolon,
    ),

    // `let` declarators may omit the initializer; `const` requires one.
    // ucode rejects `const a;` ("Expecting initializer expression").
    lexical_declaration: $ => choice(
      seq(
        field('kind', 'let'),
        commaSep1($.variable_declarator),
        $._semicolon,
      ),
      seq(
        field('kind', 'const'),
        commaSep1(alias($._const_declarator, $.variable_declarator)),
        $._semicolon,
      ),
    ),

    // Initializer declaration for a C-style for-header. Differs from
    // lexical_declaration in two ucode-faithful ways:
    //   - no trailing `$._semicolon`: the for-header supplies its own literal
    //     `;`, and ucode does NOT insert a semicolon there
    //     (`for (let i = 0⏎i < 3; …)` is an error), and
    //   - `let` only: ucode rejects `const` in a for-header initializer
    //     (`for (const …)` → "Expecting expression"), just as it does for the
    //     for-in target.
    // Aliased back to lexical_declaration in the for-header so the tree node
    // name is unchanged.
    variable_declarator: $ => seq(
      field('name', $.identifier),
      optional($._initializer),
    ),

    _const_declarator: $ => seq(
      field('name', $.identifier),
      $._initializer,
    ),

    statement_block: $ => prec.right(seq(
      '{',
      repeat($.statement),
      '}',
      optional($._automatic_semicolon),
    )),

    // An unbraced control-flow body accepts any statement except a lexical
    // declaration: ucode rejects `if (x) let y = 1;` / `while (c) const z = 1;`
    // ("Expecting expression") but accepts expression statements, `function`
    // declarations and blocks. (The `:`…`endif` alt-syntax body, which is
    // block-like, still allows `let`/`const` and uses `statement` directly.)
    // Mirror `statement` minus `lexical_declaration` — and minus import/export,
    // which ucode allows only at a module's top level (`if (1) import "m";`
    // also errors with "Expecting expression").
    _unbraced_statement: $ => choice(
      $.expression_statement,
      $.function_declaration,
      $.statement_block,

      $.if_statement,
      $.if_alt_statement,
      $.switch_statement,
      $.for_statement,
      $.for_alt_statement,
      $.for_in_statement,
      $.for_in_alt_statement,
      $.while_statement,
      $.while_alt_statement,
      $.try_statement,

      $.break_statement,
      $.continue_statement,
      $.return_statement,
      $.empty_statement,
    ),

    while_statement: $ => seq(
      'while',
      field('condition', $.parenthesized_expression),
      field('body', $._unbraced_statement),
    ),

    return_statement: $ => seq(
      'return',
      optional($._expressions),
      $._semicolon,
    ),

    empty_statement: _ => ';',

    //
    // Statement components
    //

    parenthesized_expression: $ => seq(
      '(',
      $._expressions,
      ')',
    ),

    //
    // Expressions
    //

    _expressions: $ => choice(
      $.expression,
      $.sequence_expression,
    ),

    object: $ => prec('object', seq(
      '{',
      optional(seq(
        commaSep1(choice(
          $.pair,
          $.spread_element,
          alias(
            choice($.identifier, $._reserved_identifier),
            $.shorthand_property_identifier,
          ),
        )),
        optional(','),
      )),
      '}',
    )),

    // ucode allows a trailing comma but NOT interior elision (`[1,,2]`).
    array: $ => seq(
      '[',
      optional(seq(
        commaSep1(choice(
          $.expression,
          $.spread_element,
        )),
        optional(','),
      )),
      ']',
    ),

    call_expression: $ => choice(
      prec('call', seq(
        field('function', $.expression),
        field('arguments', $.arguments),
      )),
      prec('member', seq(
        field('function', $.primary_expression),
        field('optional_chain', $.optional_chain),
        field('arguments', $.arguments),
      )),
    ),

    member_expression: $ => prec('member', seq(
      field('object', choice($.expression, $.primary_expression)),
      choice('.', field('optional_chain', $.optional_chain)),
      field('property', reserved('properties', alias($.identifier, $.property_identifier))),
    )),

    subscript_expression: $ => prec.right('member', seq(
      field('object', choice($.expression, $.primary_expression)),
      optional(field('optional_chain', $.optional_chain)),
      '[', field('index', $._expressions), ']',
    )),

    // Assignment targets. ucode rejects a parenthesized whole target
    // (`(a) = 1` is "Unexpected token"), so the left-hand side is a plain
    // reference. (An optional chain anywhere in the target — `a?.b = 1` — is
    // also rejected by ucode, but that is a semantic lval check the grammar
    // does not attempt; member/subscript here still permit `?.`.)
    _lhs_expression: $ => choice(
      $.member_expression,
      $.subscript_expression,
      $._identifier,
      alias($._reserved_identifier, $.identifier),
    ),

    assignment_expression: $ => prec.right('assign', seq(
      field('left', $._lhs_expression),
      '=',
      field('right', $.expression),
    )),

    _initializer: $ => seq(
      '=',
      field('value', $.expression),
    ),

    ternary_expression: $ => prec.right('ternary', seq(
      field('condition', $.expression),
      alias($._ternary_qmark, '?'),
      field('consequence', $.expression),
      ':',
      field('alternative', $.expression),
    )),

    binary_expression: $ => choice(
      ...[
        ['&&', 'logical_and'],
        ['||', 'logical_or'],
        ['>>', 'binary_shift'],
        ['<<', 'binary_shift'],
        ['&', 'bitwise_and'],
        ['^', 'bitwise_xor'],
        ['|', 'bitwise_or'],
        ['+', 'binary_plus'],
        ['-', 'binary_plus'],
        ['*', 'binary_times'],
        ['/', 'binary_times'],
        ['%', 'binary_times'],
        ['**', 'binary_exp'],  // left-associative in ucode: 4**3**2 == (4**3)**2
        ['<', 'binary_relation'],
        ['<=', 'binary_relation'],
        ['==', 'binary_equality'],
        ['===', 'binary_equality'],
        ['!=', 'binary_equality'],
        ['!==', 'binary_equality'],
        ['>=', 'binary_relation'],
        ['>', 'binary_relation'],
        ['??', 'logical_or'],    // same level as ||, freely mixable
        ['in', 'binary_relation'],
      ].map(([operator, precedence, associativity]) =>
        (associativity === 'right' ? prec.right : prec.left)(precedence, seq(
          field('left', $.expression),
          field('operator', operator),
          field('right', $.expression),
        )),
      ),
    ),

    update_expression: $ => prec.left('update', choice(
      seq(
        field('argument', $._lhs_expression),
        field('operator', choice('++', '--')),
      ),
      seq(
        field('operator', choice('++', '--')),
        field('argument', $._lhs_expression),
      ),
    )),

    sequence_expression: $ => prec.right(commaSep1($.expression)),

    //
    // Functions
    //

    function_expression: $ => prec('literal', seq(
      'function',
      field('name', optional($.identifier)),
      $._call_signature,
      field('body', $.statement_block),
    )),

    // Function declaration — brace body or alternative colon/endfunction syntax
    function_declaration: $ => prec.right('declaration', seq(
      'function',
      field('name', $.identifier),
      $._call_signature,
      field('body', choice(
        $.statement_block,
        seq(':', repeat($.statement), 'endfunction'),
      )),
      optional($._automatic_semicolon),
    )),

    arrow_function: $ => seq(
      choice(
        field('parameter', choice(
          alias($._reserved_identifier, $.identifier),
          $.identifier,
        )),
        $._call_signature,
      ),
      '=>',
      field('body', choice(
        $.expression,
        $.statement_block,
      )),
    ),

    _call_signature: $ => field('parameters', $.formal_parameters),

    // A rest element (`...name`) must be the final parameter, and there can be
    // only one.  ucode rejects a rest param followed by anything — including a
    // trailing comma.  A trailing comma is allowed only after plain parameters.
    formal_parameters: $ => seq(
      '(',
      optional(choice(
        $.rest_element,
        seq(commaSep1($.identifier), ',', $.rest_element),
        seq(commaSep1($.identifier), optional(',')),
      )),
      ')',
    ),

    rest_element: $ => seq('...', $.identifier),

    //
    // Primitives
    //

    string: $ => choice(
      seq(
        '"',
        repeat(choice(
          alias($.unescaped_double_string_fragment, $.string_fragment),
          $.escape_sequence,
        )),
        '"',
      ),
      seq(
        '\'',
        repeat(choice(
          alias($.unescaped_single_string_fragment, $.string_fragment),
          $.escape_sequence,
        )),
        '\'',
      ),
    ),

    escape_sequence: _ => token.immediate(seq(
      '\\',
      choice(
        /[^xu0-7]/,
        /[0-7]{1,3}/,
        /x[0-9a-fA-F]{2}/,
        /u[0-9a-fA-F]{4}/,
        /\r[\n\u2028\u2029]/,
      ),
    )),

    // `comment` is an external token (see externals / scanner_impl.h). A `//`
    // line comment normally runs to the end of the line, but inside a markup
    // statement tag it also stops before a `%}` / `-%}` close so that
    // `{% x = 1; // note %}` matches ucode (which ends the comment at the tag).
    // Block comments `/* */` end at `*/` as usual.

    template_string: $ => seq(
      '`',
      repeat(choice(
        alias($._template_chars, $.string_fragment),
        $.escape_sequence,
        $.template_substitution,
      )),
      '`',
    ),

    template_substitution: $ => seq(
      '${',
      $._expressions,
      '}',
    ),

    regex: $ => seq(
      '/',
      field('pattern', $.regex_pattern),
      token.immediate(prec(1, '/')),
      optional(field('flags', $.regex_flags)),
    ),

    regex_pattern: _ => token.immediate(prec(-1,
      repeat1(choice(
        seq('[', repeat(choice(
          // POSIX bracket sub-expressions: [:class:] [.coll.] [=equiv=].
          // Their inner ']' must not close the enclosing character class.
          seq('[:', /[^:\n\]]*/, ':]'),
          seq('[.', /[^.\n\]]*/, '.]'),
          seq('[=', /[^=\n\]]*/, '=]'),
          seq('\\', /./),
          /[^\]\n\\]/,
        )), ']'),
        seq('\\', /./),
        /[^/\\\[\n]/,
      )),
    )),

    // Ucode supports only g, i, s flags (not m, u, y, d)
    regex_flags: _ => token.immediate(/[gis]+/),

    // Ucode number literals extend JS with:
    // - C-style legacy octal: 0177
    // - Hex float: 0x1.8
    // - Uppercase prefixes: 0O, 0B (already in JS grammar)
    //
    // Unlike JS, ucode does NOT support:
    // - numeric underscore separators (1_000)
    // - leading-dot floats (.5) — a digit is required before the dot
    //
    // Leading-zero handling matches ucode exactly (verified against the
    // interpreter). After a leading `0` (not 0x/0b/0o):
    //   - `.`/`e` follows      -> decimal float/exp, the 0 is a lone zero (0.5, 0e2)
    //   - a [0-7] digit follows -> legacy octal; ALL further digits must be
    //                              [0-7] and no `.`/`e` is allowed (0177 ok;
    //                              017.5, 0177e2, 019 rejected)
    //   - an [89] digit follows -> decimal (08, 09, 089, 0812, 08.5e2)
    // Invalid forms (019, 0189, 0177e2, 0123.5, 00.5) are not matched by any
    // alternative; they split into adjacent tokens and surface as parse errors,
    // matching ucode's "Invalid number literal".
    number: _ => {
      const hexDigits = /[\da-fA-F]+/;
      const hexLiteral = seq(choice('0x', '0X'), hexDigits);
      const hexFloat = seq(choice('0x', '0X'), hexDigits, '.', optional(hexDigits));

      const decimalDigits = /\d+/;
      const signedInteger = seq(optional(choice('-', '+')), decimalDigits);
      const exponentPart = seq(choice('e', 'E'), signedInteger);
      const fraction = seq('.', optional(decimalDigits));

      const binaryLiteral = seq(choice('0b', '0B'), /[0-1]+/);
      const octalLiteral = seq(choice('0o', '0O'), /[0-7]+/);

      // Legacy C octal: `0` then octal digits only, no fraction/exponent.
      const legacyOctalLiteral = seq('0', /[0-7]+/);

      const decimalLiteral = choice(
        // No leading zero: 1-9 then optional digits/fraction/exponent.
        seq(/[1-9]/, optional(decimalDigits), optional(fraction), optional(exponentPart)),
        // Leading zero followed by 8 or 9: legacy non-octal decimal.
        seq('0', /[89]/, optional(decimalDigits), optional(fraction), optional(exponentPart)),
        // A lone zero, optionally with a fraction and/or exponent.
        seq('0', optional(choice(seq(fraction, optional(exponentPart)), exponentPart))),
      );

      return token(choice(
        hexFloat,
        hexLiteral,
        decimalLiteral,
        binaryLiteral,
        octalLiteral,
        legacyOctalLiteral,
      ));
    },

    identifier: _ => /[A-Za-z_][A-Za-z0-9_]*/,

    this: _ => 'this',
    true: _ => 'true',
    false: _ => 'false',
    null: _ => 'null',

    // Unlike arrays/objects, ucode call arguments allow neither interior
    // elision (`f(1,,2)`) nor a trailing comma (`f(1,2,)`).
    arguments: $ => seq(
      '(',
      commaSep(choice($.expression, $.spread_element)),
      ')',
    ),

    _property_name: $ => reserved('properties', choice(
      alias(
        choice($.identifier, $._reserved_identifier),
        $.property_identifier,
      ),
      $.string,
      $.number,
      $.computed_property_name,
    )),

    pair: $ => seq(
      field('key', $._property_name),
      ':',
      field('value', $.expression),
    ),

    _reserved_identifier: _ => choice(
      'get',
      'set',
    ),
