test/corpus/js_differences.txt
================================================================================
var is not a keyword — produces ERROR
================================================================================

var x = 1;

--------------------------------------------------------------------------------

(program
  (expression_statement
    (assignment_expression
      left: (identifier)
      (ERROR (identifier))
      right: (number))))

================================================================================
new is not a keyword — produces ERROR
================================================================================

new Foo();

--------------------------------------------------------------------------------

(program
  (ERROR (identifier))
  (expression_statement
    (call_expression
      function: (identifier)
      arguments: (arguments))))

================================================================================
throw is not a keyword — produces ERROR
================================================================================

throw err;

--------------------------------------------------------------------------------

(program
  (expression_statement
    (identifier)
    (ERROR (identifier))))

================================================================================
typeof is not a keyword — produces ERROR
================================================================================

typeof x;

--------------------------------------------------------------------------------

(program
  (expression_statement
    (identifier)
    (ERROR (identifier))))

================================================================================
Array destructuring — produces ERROR
================================================================================

let [a, b] = arr;

--------------------------------------------------------------------------------

; Ucode has no destructuring. `let [a, b] = arr` is not valid ucode.
; `let` is a keyword and cannot be used as an identifier, so the parser
; produces an ERROR node. The `= arr` portion is recovered as a separate
; expression statement.

(program
  (ERROR
    (array
      (identifier)
      (identifier)))
  (expression_statement
    (identifier)))

================================================================================
Object destructuring — produces ERROR
================================================================================

let {x} = obj;

--------------------------------------------------------------------------------

(program
  (ERROR)
  (statement_block
    (expression_statement (identifier)))
  (ERROR)
  (expression_statement (identifier)))

================================================================================
class is not a keyword — produces ERROR
================================================================================

class Foo {}

--------------------------------------------------------------------------------

(program
  (ERROR
    (identifier)
    (identifier))
  (statement_block))

================================================================================
do-while is not supported — produces ERROR
================================================================================

do { x++; } while (x < 10);

--------------------------------------------------------------------------------

(program
  (ERROR (identifier))
  (statement_block
    (expression_statement
      (update_expression argument: (identifier))))
  (while_statement
    condition: (parenthesized_expression
      (binary_expression left: (identifier) right: (number)))
    body: (empty_statement)))

================================================================================
for...of is not supported — produces ERROR
================================================================================

for (x of arr) {}

--------------------------------------------------------------------------------

(program
  (ERROR
    (ERROR
      (identifier)
      (identifier)
      (identifier))
    (object)))

================================================================================
async function is not supported — produces ERROR
================================================================================

async function f() {}

--------------------------------------------------------------------------------

(program
  (ERROR (identifier))
  (function_declaration
    name: (identifier)
    parameters: (formal_parameters)
    body: (statement_block)))

================================================================================
Generator function is not supported — produces ERROR
================================================================================

function* gen() {}

--------------------------------------------------------------------------------

; `*` is not valid between `function` and the name; it lands as an ERROR node
; inside the function_declaration while the rest parses normally.

(program
  (function_declaration
    (ERROR)
    name: (identifier)
    parameters: (formal_parameters)
    body: (statement_block)))

================================================================================
>>> unsigned right shift is not supported — produces ERROR
================================================================================

let x = a >>> b;

--------------------------------------------------------------------------------

(program
  (lexical_declaration
    (variable_declarator
      name: (identifier)
      value: (binary_expression
        left: (identifier)
        (ERROR)
        right: (identifier)))))

================================================================================
void is not a keyword — produces ERROR
================================================================================

void x;

--------------------------------------------------------------------------------

(program
  (expression_statement
    (identifier)
    (ERROR (identifier))))

================================================================================
instanceof is not a keyword — produces ERROR
================================================================================

a instanceof b;

--------------------------------------------------------------------------------

(program
  (ERROR
    (identifier)
    (identifier))
  (expression_statement (identifier)))

================================================================================
debugger is not a keyword — silently parses as identifier
================================================================================

debugger;

--------------------------------------------------------------------------------

; Unlike other removed JS keywords, `debugger` is not in the reserved list and
; parses without error as a plain expression statement containing an identifier.

(program
  (expression_statement (identifier)))

================================================================================
await is not a keyword — produces ERROR
================================================================================

await foo();

--------------------------------------------------------------------------------

(program
  (expression_statement
    (call_expression
      function: (identifier)
      (ERROR (identifier))
      arguments: (arguments))))

================================================================================
yield is not a keyword — produces ERROR
================================================================================

yield x;

--------------------------------------------------------------------------------

(program
  (expression_statement
    (identifier)
    (ERROR (identifier))))

================================================================================
Bare array destructuring assignment — produces ERROR
================================================================================

[a, b] = [1, 2];

--------------------------------------------------------------------------------

; Ucode has no destructuring. A bare `[a, b] = [...]` is parsed as a subscript
; expression where `[a, b]` is the object and `= [...]` is invalid inside the
; subscript, so the parser produces an ERROR node around the `=` and its operand.

(program
  (expression_statement
    (subscript_expression
      object: (array
        (identifier)
        (identifier))
      (ERROR)
      index: (sequence_expression
        (number)
        (number)))))

================================================================================
Function parameter destructuring — produces ERROR
================================================================================

function f([a, b]) {}

--------------------------------------------------------------------------------

(program
  (ERROR
    (identifier)
    (array
      (identifier)
      (identifier)))
  (statement_block))

================================================================================
Dynamic import — produces ERROR
================================================================================

import("module");

--------------------------------------------------------------------------------

(program
  (ERROR)
  (expression_statement
    (parenthesized_expression
      (string
        (string_fragment)))))

================================================================================
Numeric underscore separators are not supported — produces ERROR
:error
================================================================================

let x = 1_000;

--------------------------------------------------------------------------------

================================================================================
Leading-dot floats are not supported — produces ERROR
:error
================================================================================

let x = .5;

--------------------------------------------------------------------------------

================================================================================
const without initializer — produces ERROR
:error
================================================================================

const a;

--------------------------------------------------------------------------------

================================================================================
delete on a non-property expression — produces ERROR
:error
================================================================================

delete a;

--------------------------------------------------------------------------------

================================================================================
Array element elision is not supported — produces ERROR
:error
================================================================================

let x = [1, , 2];

--------------------------------------------------------------------------------

================================================================================
Object element elision is not supported — produces ERROR
:error
================================================================================

let x = { a: 1, , b: 2 };

--------------------------------------------------------------------------------

================================================================================
Call-argument elision is not supported — produces ERROR
:error
================================================================================

print(1, , 2);

--------------------------------------------------------------------------------

================================================================================
Trailing comma in call arguments is not supported — produces ERROR
:error
================================================================================

print(1, 2,);

--------------------------------------------------------------------------------

================================================================================
export function requires a trailing semicolon — produces ERROR
:error
================================================================================

export function f() {}

--------------------------------------------------------------------------------

================================================================================
Braced unicode escape \u{...} is not supported in strings — produces ERROR
:error
================================================================================

let s = "\u{1F600}";

--------------------------------------------------------------------------------

================================================================================
Unicode escapes in identifiers are not supported — produces ERROR
:error
================================================================================

let \u0041 = 1;

--------------------------------------------------------------------------------

================================================================================
Rest parameter must be last — produces ERROR
:error
================================================================================

function f(...a, b) {}

--------------------------------------------------------------------------------

================================================================================
Only one rest parameter is allowed — produces ERROR
:error
================================================================================

function f(...a, ...b) {}

--------------------------------------------------------------------------------

================================================================================
Binary operator directly before a ternary qmark — produces ERROR
:error
================================================================================

x = a -? b : c;

--------------------------------------------------------------------------------

================================================================================
Division slash directly before a ternary qmark — produces ERROR
:error
================================================================================

x = a /? b : c;

--------------------------------------------------------------------------------

================================================================================
Newline before a ternary qmark is allowed
================================================================================

let r = x
? a : b;

--------------------------------------------------------------------------------

(program
  (lexical_declaration
    (variable_declarator
      name: (identifier)
      value: (ternary_expression
        condition: (identifier)
        consequence: (identifier)
        alternative: (identifier)))))
